force-app/main/default/objects/DTC_Application_Level__c/DTC_Application_Level__c.object-meta.xml
<CustomObject>
    <label>DTC Application Level</label>
    <nameField>
        <label>DTC Application Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DTC Application Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>