force-app/main/default/objects/DTC_Application_Level__c/fields/Application_Level_User_Creation_Flow__c.field-meta.xml
<CustomField>
    <fullName>Application_Level_User_Creation_Flow__c</fullName>
    <description>Flow used to supplement user provision process for a specific application</description>
    <label>Application Level User Creation Flow</label>
    <length>40</length>
    <type>Text</type>
</CustomField>