force-app/main/default/objects/DTC_Application_Level__c/fields/Destination_Org_License__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org_License__c</fullName>
    <description>License name required in the destination org</description>
    <label>Destination Org License</label>
    <length>40</length>
    <type>Text</type>
</CustomField>