force-app/main/default/objects/DTC_Application_Level__c/fields/Destination_Org_Profile__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org_Profile__c</fullName>
    <description>Profile name required in the destination org</description>
    <label>Destination Org Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>