force-app/main/default/objects/DTC_Application_Level__c/fields/Destination_Org_Role__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org_Role__c</fullName>
    <description>Role name in the destination org</description>
    <label>Destination Org Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>