force-app/main/default/objects/DTC_Application_Level__c/fields/DTC_Application__c.field-meta.xml
<CustomField>
    <fullName>DTC_Application__c</fullName>
    <label>DTC Application</label>
    <referenceTo>DTC_Application__c</referenceTo>
    <relationshipLabel>DTC Application Levels</relationshipLabel>
    <relationshipName>DTC_Application_Levels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>