force-app/main/default/objects/DTC_Application_Level__c/fields/Elevated_Access__c.field-meta.xml
<CustomField>
    <fullName>Elevated_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines whether this role requires an ePas request to obtain</inlineHelpText>
    <label>Elevated Access?</label>
    <type>Checkbox</type>
</CustomField>