force-app/main/default/objects/DTC_Application_Level__c/fields/Hub_Org_License__c.field-meta.xml
<CustomField>
    <fullName>Hub_Org_License__c</fullName>
    <description>License name required in the hub org</description>
    <label>Hub Org License</label>
    <length>40</length>
    <type>Text</type>
</CustomField>