force-app/main/default/objects/DTC_Application_Level__c/fields/Hub_Org_Profile__c.field-meta.xml
<CustomField>
    <fullName>Hub_Org_Profile__c</fullName>
    <description>Profile name required in the hub org</description>
    <label>Hub Org Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>