force-app/main/default/objects/DTC_Application_Level__c/fields/Hub_Org_Role__c.field-meta.xml
<CustomField>
    <fullName>Hub_Org_Role__c</fullName>
    <description>Role name in the hub org</description>
    <label>Hub Org Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>