force-app/main/default/objects/DTC_Application_Level__c/fields/Other_Setup_Info__c.field-meta.xml
<CustomField>
    <fullName>Other_Setup_Info__c</fullName>
    <label>Other Setup Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>