force-app/main/default/objects/DTC_Application_Level__c/fields/Permission_Set_s__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_s__c</fullName>
    <label>Permission Set(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>