force-app/main/default/objects/DTC_Application_Level__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>