force-app/main/default/objects/DTC_Application_Level__c/fields/Public_Group_s__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Public Group(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>